test/libsolidity/syntaxTests/errors/zero_signature.sol
error buyAndFree22457070633(uint256);
contract C {
    error buyAndFree22457070633(uint256);
}
// ----
// Warning 2519: (55-92): This declaration shadows an existing declaration.
// SyntaxError 2855: (0-37): The selector 0x00000000 is reserved. Please rename the error to avoid the collision.
// SyntaxError 2855: (55-92): The selector 0x00000000 is reserved. Please rename the error to avoid the collision.
